gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail23861.d
version https://git-lfs.github.com/spec/v1
oid sha256:7a19af6a57a15be5b7efdd395e12d0498cbe4f4ab45809a4d9dfcf485e9cf804
size 324
